<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android1:id="@+id/textView1"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignParentLeft="true"
        android1:layout_alignParentTop="true"
        android1:text="@string/route_name"
        android1:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android1:id="@+id/textView2"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignParentLeft="true"
        android1:layout_below="@+id/textView1"
        android1:text="@string/dist_location"
        android1:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android1:id="@+id/textView3"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignParentLeft="true"
        android1:layout_below="@+id/textView2"
        android1:text="@string/distance_miles"
        android1:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android1:id="@+id/textView4"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignParentLeft="true"
        android1:layout_below="@+id/textView3"
        android1:text="@string/directions"
        android1:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android1:id="@+id/textView5"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignParentLeft="true"
        android1:layout_below="@+id/textView4"
        android1:text="@string/go_here"
        android1:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>